2014-02-15  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: The AC3 packetizer will re-derive the
        sampling frequency and the number of channels from the
        bitstream. This way obviously invalid information from the source
        container like a sampling frequency of 0 Hz will be fixed.

2014-02-05  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: enhancements: AVI reader: audio chunks with obvious
        wrong size information (bigger than 10 MB) will be skipped.

2014-02-03  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: When reading M2TS files belonging to an MPLS
        playlist mkvmerge will now only copy packets whose timestamps lie
        between the »in time« and »out time« restrictions from the
        playlist's entry corresponding to that M2TS file. Fixes #985.

2014-01-22  Moritz Bunkus  <moritz@bunkus.org>

        * all: Windows 64bit: fixed return value checks for opening
        files. Fixes #972.

2014-01-21  Moritz Bunkus  <moritz@bunkus.org>

        * all: Windows: when redirecting the program's output with cmd.exe
        (e.g. »mkvinfo file.mkv > info.txt«) the programs will no longer
        write two line feed characters (\r) per carriage return character
        (\n). Fixes #970.

        * all: Windows: the default charset for the files created with
        »--redirect-output« has been changed from the system's local
        charset to UTF-8. Just like before it can be changed with
        »--output-charset«. See #970.

        * all: bug fix: Windows: messages written to the console (cmd.exe)
        are not re-encoded to the local charset and back to UTF-16 before
        they're handed over to ConsoleWriteW(). This fixes outputting
        Unicode characters to the console that are not part of the local
        charset. Fixes #971.

2014-01-18  Moritz Bunkus  <moritz@bunkus.org>

        * extract: bug fix: using names of non-existing files in