@@ -1,3 +1,8 @@
+2014-02-22  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: enhancement: The deprecated ISO 639-1 code "iw" is now
+        recognized for Hebrew.
+
 2014-02-15  Moritz Bunkus  <moritz@bunkus.org>
 
         * mkvmerge: bug fix: The AC3 packetizer will re-derive the
